--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
+    "mongodb": "^6.9.0",
     "next": "^14.2.15",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
@@ -20,7 +21,8 @@
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
-    "@types/react": "18.3.11",
+    "@types/node": "^22.7.6",
+    "@types/react": "^18.3.11",
     "typescript": "^5.0.0"
   }
 }
