--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.7.6",
