--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "mongodb": "^6.10.0",
+    "next-auth": "^4.24.8",
     "postcss": "^8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
