--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.7.2",
     "next": "14.2.14",
     "next-auth": "5.0.0-beta.22",
     "react": "^18.3.1",
