Cleaning up .env again ...

--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-MONGODB_URI="mongodb+srv://wdd430-user:QM3fNuWl8yuJqqHZ@cluster0.xcsmnna.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-AUTH_SECRET=7LEJXonG/1aPKnnUN1UQyMYcCMSoCH09Le4nJFsCjHo
-NEXTAUTH_SECRET=7LEJXonG/1aPKnnUN1UQyMYcCMSoCH09Le4nJFsCjHo
-AUTH_URL=http://localhost:3000/api/auth
+# This file should not be in version control please use .env.local since it is in .gitignore
