--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.14",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "22.8.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "next": "^15.0.1",
