--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "22.8.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "eslint": "^9.13.0",
     "next": "^15.0.1",
     "typescript": "5.6.3"
   },
