--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +30,7 @@
     "@types/node": "22.8.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "eslint": "^9.13.0",
     "next": "^15.0.1",
     "typescript": "5.6.3"
   },
