--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.13.0",
+    "eslint-config-next": "^15.0.2",
     "next": "^15.0.1",
     "typescript": "5.6.3"
   },
