--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
   "name": "handcrafted-haven",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
-    "mongodb": "^6.10.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.7.2",
-    "next-auth": "^5.0.0-beta.25",
+    "next": "14.2.14",
+    "next-auth": "5.0.0-beta.22",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.14",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "22.8.2",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "^15.0.2",
-    "next": "^15.0.1",
-    "typescript": "5.6.3"
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
